app/nginx-deployment-vol.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ns-nginx
  name: app-nginx
spec:
  selector:
    matchLabels:
      name: app-nginx
  replicas: 2
  template:
    metadata:
      labels:
        name: app-nginx
    spec:
      volumes:
      - name: nfs-nginx
        persistentVolumeClaim:
          claimName: nfs-pvc
      containers:
      - image: nginx:latest
        imagePullPolicy: Always
        name: app-nginx
        volumeMounts:
        - name: nfs-nginx # name of volume should match claimName volume
          mountPath: /shared
        ports:
        - containerPort: 80
