app/nginx-destinationrules.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app-nginx-dn
  namespace: ns-nginx
spec:
  host: app-nginx-service.ns-nginx.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
